2009-09-15  Matthew Mundell <matthew.mundell@intevation.de>

	* base/CMakeLists.txt, nasl/CMakeLists.txt: Set project language to C,
	otherwise building requires a C++ compiler.  Improve some formatting.  Set
	policy CMP0005 to OLD.

	* omp/CMakeLists.txt: Set policy CMP0005 to OLD.

2009-09-15  Matthew Mundell <matthew.mundell@intevation.de>

	* omp/xml.c.BAK, omp/CMakeLists.txt.BAK, omp/README.txt.BAK,
	omp/omp.h.BAK, omp/omp.c.BAK, omp/xml.h.BAK: Remove accidentally committed
	backup files.

2009-09-15  Matthew Mundell <matthew.mundell@intevation.de>

	* omp/install_manifest.txt, omp/Makefile, omp/cmake_install.cmake,
	omp/CPackSourceConfig.cmake, omp/CMakeCache.txt, omp/CPackConfig.cmake,
	omp/CMakeFiles: Remove accidentally committed files.

2009-09-15  Matthew Mundell <matthew.mundell@intevation.de>

	Copy OMP client interface here from openvas-manager.

	* omp: New dir.

	* omp/CMakeLists.txt, omp/README.txt, omp/omp.c, omp/omp.h,
	omp/xml.c, omp/xml.h: New files.

	* MANIFEST: Add OMP lib files.

	* Makefile: Add OMP lib building.  Correct typo.  Flush trailing
	whitespace.

	* doc/Doxyfile, doc/Doxyfile_full: Add omp to include dirs.

	* misc/openvas_server.c	(openvas_server_open): Add const to arg.
	(openvas_server_send): Check if server closed connection, as in manager.

	* misc/openvas_server.h: Add include guard.
	(openvas_server_open): Add const to arg.

2009-09-15  Matthew Mundell <matthew.mundell@intevation.de>

	* ChangeLog: Flush whitespace.  Add spaces to headings.

2009-09-15  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/system.h: Added missing include. Again
	thanks to Marcus Brinkmann for finding this.

2009-09-14  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Add support for certificates for GNUTLS connections.
	Developed by Marcus Brinkmann.

	* misc/network.c (ovas_allocate_connection): Add parameter
	certcred and handle credentials accordingly.
	(nessus_register_connection): Added parameter certcred and