@@ -106,38 +106,6 @@ misc/www_funcs.c
 misc/www_funcs.h
 nasl/CMakeLists.txt
 nasl/capture_packet.c
-nasl/exec.c
-nasl/hmacmd5.c
-nasl/lint.c
-nasl/lsearch.c
-nasl/md5.c
-nasl/nasl.c
-nasl/nasl_cmd_exec.c
-nasl/nasl_crypto2.c
-nasl/nasl_crypto.c
-nasl/nasl_debug.c
-nasl/nasl_func.c
-nasl/nasl_grammar.tab.c
-nasl/nasl_host.c
-nasl/nasl_http.c
-nasl/nasl_init.c
-nasl/nasl_lex_ctxt.c
-nasl/nasl_misc_funcs.c
-nasl/nasl_nessusd_glue.c
-nasl/nasl_packet_forgery.c
-nasl/nasl_signature.c
-nasl/nasl_smb.c
-nasl/nasl_socket.c
-nasl/nasl_text_utils.c
-nasl/nasl_tree.c
-nasl/nasl_var.c
-nasl/nasl_wmi.c
-nasl/preparse.c
-nasl/regex.c
-nasl/smb_interface_stub.c
-nasl/strutils.c
-nasl/wmi_interface_stub.c
-nasl/capture_packet.c
 nasl/capture_packet.h
 nasl/config.h
 nasl/exec.c
@@ -175,12 +143,12 @@ nasl/nasl_lex_ctxt.c
 nasl/nasl_lex_ctxt.h
 nasl/nasl_misc_funcs.c
 nasl/nasl_misc_funcs.h
-nasl/nasl_nessusd_glue.c
-nasl/nasl_nessusd_glue.h
 nasl/nasl_packet_forgery.c
 nasl/nasl_packet_forgery.h
 nasl/nasl_raw.h
 nasl/nasl_regex.h
+nasl/nasl_scanner_glue.c
+nasl/nasl_scanner_glue.h
 nasl/nasl_signature.c
 nasl/nasl_signature.h
 nasl/nasl_smb.c
