@@ -145,7 +145,7 @@ ADD_CUSTOM_COMMAND (
 set (FILES capture_packet.c exec.c hmacmd5.c lint.c lsearch.c md5.c nasl.c
      nasl_cmd_exec.c nasl_crypto2.c nasl_crypto.c nasl_debug.c nasl_func.c
      nasl_grammar.tab.c nasl_host.c nasl_http.c nasl_init.c nasl_lex_ctxt.c
-     nasl_misc_funcs.c nasl_nessusd_glue.c nasl_packet_forgery.c
+     nasl_misc_funcs.c nasl_scanner_glue.c nasl_packet_forgery.c
      nasl_signature.c nasl_smb.c nasl_socket.c nasl_text_utils.c nasl_tree.c
      nasl_var.c nasl_wmi.c preparse.c regex.c strutils.c)
 
